feat(api): add a new API for listing model usages (#78)
