# ts/api/v1/usage_server.pb.ts
@@ -5,6 +5,11 @@
 */
 
 import * as fm from "../../fetch.pb"
+export type RequestFilter = {
+  start_timestamp?: string
+  end_timestamp?: string
+}
+
 export type GetAggregatedSummaryRequest = {
   tenant_id?: string
   start_time?: string
@@ -77,6 +82,24 @@ export type ListUsageDataResponse = {
   usages?: UsageDataByGroup[]
 }
 
+export type ListModelUsageSummariesRequest = {
+  filter?: RequestFilter
+}
+
+export type ListModelUsageSummariesResponseValue = {
+  model_id?: string
+  total_requests?: string
+}
+
+export type ListModelUsageSummariesResponseDatapoint = {
+  timestamp?: string
+  values?: ListModelUsageSummariesResponseValue[]
+}
+
+export type ListModelUsageSummariesResponse = {
+  datapoints?: ListModelUsageSummariesResponseDatapoint[]
+}
+
 export class APIUsageService {
   static GetAggregatedSummary(req: GetAggregatedSummaryRequest, initReq?: fm.InitReq): Promise<AggregatedSummary> {
     return fm.fetchReq<GetAggregatedSummaryRequest, AggregatedSummary>(`/llmariner.apiusage.server.v1.APIUsageService/GetAggregatedSummary`, {...initReq, method: "POST", body: JSON.stringify(req)})
@@ -86,5 +109,8 @@ export class APIUsageService {
   }
   static ListUsageData(req: ListUsageDataRequest, initReq?: fm.InitReq): Promise<ListUsageDataResponse> {
     return fm.fetchReq<ListUsageDataRequest, ListUsageDataResponse>(`/v1/api_usages?${fm.renderURLSearchParams(req, [])}`, {...initReq, method: "GET"})
+  }
+  static ListModelUsageSummaries(req: ListModelUsageSummariesRequest, initReq?: fm.InitReq): Promise<ListModelUsageSummariesResponse> {
+    return fm.fetchReq<ListModelUsageSummariesRequest, ListModelUsageSummariesResponse>(`/v1/api-usage/model-usage-summaries?${fm.renderURLSearchParams(req, [])}`, {...initReq, method: "GET"})
   }
 }
